--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <script src="app.js"></script>
     <title>Document</title>
 </head>
-    <body>
-        
-    </body>
+<body>
+    <div class="header"></div>
+    <div class="body">
+        <div id="results"></div>
+        <div class="selector-container">
+            <button id="rock">Rock</button>
+            <button id="paper">Paper</button>
+            <button id="scissors">Scissors</button>
+        </div>
+    </div>
+    <div class="footer"></div>
+    <script src="app.js"></script>
+</body>
 </html>
